-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 Beta 3
-
None
-
f890798053c7fa692bff7f8a3e96583dfcaba0cb (qt/qtwayland/5.12.0) fa57079a227b92218c5b23dafdcb7f547acb635d (qt/qtwayland/5.11.3)
The fix for QTBUG-69384 introduced a behaviour change that causes crashes in compositors that do not implement close animations, such as the minimal-cpp example.
| For Gerrit Dashboard: QTBUG-71643 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 244834,2 | Don't crash if view is deleted from surfaceDestroyed signal | 5.12.0 | qt/qtwayland | Status: MERGED | +2 | 0 |
| 245809,2 | Don't crash if view is deleted from surfaceDestroyed signal | 5.11.3 | qt/qtwayland | Status: MERGED | +2 | 0 |