Don't crash if view is deleted from surfaceDestroyed signal

Fix regression introduced in 297bcd005c4205f69e1bf9e9dc565ab757cf0bac

Fixes: QTBUG-71643
Change-Id: I769518a9ca13fcd13ea277c7fa8ac1885ca123ba
Reviewed-by: Johan Helsing <johan.helsing@qt.io>
(cherry picked from commit f890798053c7fa692bff7f8a3e96583dfcaba0cb)
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>